Bug 941409, add support for an anchor attribute to menus so that the popup can be anchored to a different element than the menu itself, this is used to avoid repositioning the bookmarks toolbar button menu, also changes popups to default to vertical orientation [Australis] r=neil,mconley